--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "ts-generator": "0.1.1",
     "ts-node": "9.1.1",
     "typechain": "4.0.1",
-    "typescript": "4.1.3"
+    "typescript": "4.1.3",
+    "pg": "8.7.3",
+    "sequelize-cli": "^6.4.1"
   },
   "comments": {
     "dependencies": "hardhat-solhint includes an old version of solhint, that's why specific solhint dependency is added"
@@ -87,7 +89,7 @@
     "test": "hardhat test",
     "deploy-kovan": "hardhat deploy --network kovan",
     "deploy-local": "hardhat deploy --network hardhat",
-    "prestart": "cd scripts && preinstall.sh",
+    "prestart": "export $(cat .env | xargs) && cd scripts && ./preinstall.sh",
     "start": "node src/server",
     "release": "standard-version",
     "dev": "nodemon scr/server"
