--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "hardhat": "2.0.6",
     "hardhat-deploy": "0.7.4",
     "hardhat-deploy-ethers": "0.3.0-beta.7",
@@ -46,8 +47,10 @@
     "hardhat-typechain": "0.3.4",
     "leafleth": "0.0.9",
     "nodemon": "^2.0.16",
+    "pg": "8.7.3",
     "prettier": "2.2.1",
     "prettier-plugin-solidity": "1.0.0-beta.5",
+    "sequelize-cli": "^6.4.1",
     "shelljs": "0.8.4",
     "solhint": "3.3.2",
     "solhint-plugin-prettier": "0.0.5",
@@ -56,9 +59,7 @@
     "ts-generator": "0.1.1",
     "ts-node": "9.1.1",
     "typechain": "4.0.1",
-    "typescript": "4.1.3",
-    "pg": "8.7.3",
-    "sequelize-cli": "^6.4.1"
+    "typescript": "4.1.3"
   },
   "comments": {
     "dependencies": "hardhat-solhint includes an old version of solhint, that's why specific solhint dependency is added"
