--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "@typescript-eslint/eslint-plugin": "4.14.2",
     "@typescript-eslint/parser": "4.14.2",
     "bignumber.js": "9.0.1",
+    "body-parser": "^1.20.0",
+    "c8": "^7.11.3",
     "chai": "4.2.0",
+    "chai-http": "^4.3.0",
     "dotenv": "8.2.0",
     "eslint": "7.19.0",
     "eslint-config-prettier": "6.12.0",
@@ -45,17 +48,21 @@
     "hardhat-preprocessor": "0.1.2",
     "hardhat-prettier": "0.0.1",
     "hardhat-typechain": "0.3.4",
+    "http": "^0.0.1-security",
+    "koa": "^2.13.4",
     "leafleth": "0.0.9",
     "nodemon": "^2.0.16",
     "pg": "8.7.3",
     "prettier": "2.2.1",
     "prettier-plugin-solidity": "1.0.0-beta.5",
     "sequelize-cli": "^6.4.1",
+    "sequelize-mock": "^0.10.2",
     "shelljs": "0.8.4",
     "solhint": "3.3.2",
     "solhint-plugin-prettier": "0.0.5",
     "solidity-coverage": "0.7.12",
     "standard-version": "9.1.0",
+    "supertest": "^6.2.4",
     "ts-generator": "0.1.1",
     "ts-node": "9.1.1",
     "typechain": "4.0.1",
@@ -78,6 +85,8 @@
   "scripts": {
     "prestart": "export $(cat .env | xargs) && cd scripts && ./preinstall.sh",
     "start": "node src/server --openssl-legacy-provider",
-    "dev": "nodemon scr/server"
+    "dev": "nodemon scr/server",
+    "test": "mocha test/**  -R min --exit --timeout 10000",
+    "coverage": "c8 npm test"
   }
 }
