--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@commitlint/config-conventional": "12.0.1",
     "@ethersproject/abstract-signer": "5.0.6",
     "@ethersproject/bignumber": "5.0.8",
+    "@fastify/swagger": "^6.1.0",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@0.3.0-beta.7",
     "@nomiclabs/hardhat-solhint": "2.0.0",
     "@nomiclabs/hardhat-waffle": "2.0.0",
@@ -41,6 +42,7 @@
     "ethereum-waffle": "3.2.0",
     "ethers": "5.0.24",
     "fastify": "3.14.2",
+    "fastify-swagger": "^5.2.0",
     "fs-extra": "9.0.1",
     "hardhat-contract-sizer": "2.0.2",
     "hardhat-docgen": "1.0.3",
@@ -63,6 +65,7 @@
     "solidity-coverage": "0.7.12",
     "standard-version": "9.1.0",
     "supertest": "^6.2.4",
+    "swagger-jsdoc": "^6.2.1",
     "ts-generator": "0.1.1",
     "ts-node": "9.1.1",
     "typechain": "4.0.1",
